--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/style.css" />
+    <title>AI Recipes Generator</title>
+  </head>
+  <body>
+    <h1>WELCOME TO THE AI RECIPES GENERATOR</h1>
 
+    <footer>
+      This AI project was coded by
+      <a href="https://github.com/Eugal-git?tab=repositories" target="_blank">Eugenia Tunhac</a> and
+      is
+      <a
+        href="https://github.com/Eugal-git/AI-Recipes-Generator"
+        target="_blank"
+      >
+        open-sourced on GitHub</a
+      >
+      and is
+      <a href="https://app.netlify.com/teams/eugal-git/sites" target="_blank"
+        >hosted on Netlify</a
+      >.
+    </footer>
+
+    <script src="src/index.js"></script>
+  </body>
+</html>
