--- a/index.html
+++ b/index.html
@@ -7,8 +7,24 @@
     <title>AI Recipes Generator</title>
   </head>
   <body>
-    <h1>WELCOME TO THE AI RECIPES GENERATOR</h1>
-
+    <h1> AI Recipes Generator</h1>
+    <main>
+      <form>
+        <input
+          type="text"
+          placeholder="Enter the topic of the Recipes Generator"
+          autofocus
+          required
+          autocomplete="off"
+        />
+        <input type="submit" />
+      </form>
+      <div>
+        18 Baked Pasta Recipes You Can Make in Your 9x13 Dish
+        <br />
+        12 Comfort Food Favorites to Make at the First Crack of Autumn
+      </div>
+    </main>
     <footer>
       This AI project was coded by
       <a href="https://github.com/Eugal-git?tab=repositories" target="_blank">Eugenia Tunhac</a> and
