--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1> AI Recipes Generator</h1>
+    
     <main>
       <form>
         <input
@@ -25,9 +26,10 @@
         12 Comfort Food Favorites to Make at the First Crack of Autumn
       </div>
     </main>
+    
     <footer>
       This AI project was coded by
-      <a href="https://github.com/Eugal-git?tab=repositories" target="_blank">Eugenia Tunhac</a> and
+      <a href="https://github.com/Eugal-git?tab=repositories" target="_blank">Eugenia Tunha</a> and
       is
       <a
         href="https://github.com/Eugal-git/AI-Recipes-Generator"
